[gd_scene load_steps=9 format=3 uid="uid://c5s4gqj4d6yhj"]

[ext_resource type="Script" uid="uid://brxgptvoi02pn" path="res://scripts/ui/screens/LevelSelect.gd" id="1_abcde"]
[ext_resource type="Theme" uid="uid://dshck318jhgki" path="res://scenes/ui/Theme/MainUITheme.tres" id="2_abcde"]
[ext_resource type="Script" uid="uid://c0vpaw3fd5v5u" path="res://scripts/resources/LevelConfig.gd" id="2_rinls"]
[ext_resource type="PackedScene" uid="uid://c0glq8w37tx27" path="res://scenes/main/ParticleBackground.tscn" id="3_abcde"]
[ext_resource type="Resource" uid="uid://d0ggmctqs1xg2" path="res://scenes/levels/level01/Level1Config.tres" id="3_neygj"]
[ext_resource type="Resource" uid="uid://b7vg4k7l2xg04" path="res://scenes/levels/level02/Level2Config.tres" id="4_cb0x2"]
[ext_resource type="Resource" uid="uid://bdqhv2jof62nt" path="res://scenes/levels/level03/Level3Config.tres" id="5_vf0oa"]
[ext_resource type="Resource" uid="uid://bxyox8khullxy" path="res://scenes/levels/level04/Level4Config.tres" id="6_2gjr1"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")
level_configs = Array[ExtResource("2_rinls")]([ExtResource("3_neygj"), ExtResource("4_cb0x2"), ExtResource("5_vf0oa"), ExtResource("6_2gjr1")])
level_scene_paths = Array[String](["res://scenes/levels/level01/Level01.tscn", "res://scenes/levels/level02/Level02.tscn", "res://scenes/levels/level03/Level03.tscn", "res://scenes/levels/level04/Level04.tscn"])

[node name="ParticleBackground" parent="." instance=ExtResource("3_abcde")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme = ExtResource("2_abcde")
theme_override_font_sizes/font_size = 8
text = " < 返回 "

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_abcde")
theme_override_font_sizes/font_size = 24
text = "选择任务"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LevelButtonsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3
